// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs Build breadcrumbs with empty path, embedded 1`] = `null`;

exports[`Breadcrumbs Build breadcrumbs with empty path, unembedded 1`] = `null`;

exports[`Breadcrumbs Build breadcrumbs, embedded 1`] = `
Array [
  .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  vertical-align: middle;
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  font-size: 11px;
  margin-left: -15px;
}

<div
    className="c0"
  >
    <svg
      className="c1"
      cursor="pointer"
      fill="currentcolor"
      height="30px"
      onClick={[Function]}
      test-tag="to_home"
      viewBox="0 0 148.167 127.257"
      width="30px"
    >
      <path
        d="M0 63.5l10.583 10.583 63.5-52.916 63.5 52.916L148.167 63.5 74.083 0z"
      />
      <path
        d="M74.083 28.149l-50.27 41.618v57.49h34.316V92.312c0-4.162 2.06-11.64 15.954-11.628 13.894.012 15.958 7.406 15.958 11.71v34.863h34.313v-57.49zM124.354 38.92l-19.553-17.224V5.252l19.553.04z"
      />
    </svg>
    <div
      className="c2"
      cursor="pointer"
      fontSize="11px"
      onClick={[Function]}
    >
      Go to home
    </div>
  </div>,
  .c0 {
  cursor: inherit;
  font-size: 24px;
  margin-left: 6px;
  margin-right: 6px;
}

<div
    className="c0"
    cursor="inherit"
    fontSize="24px"
  >
    |
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - 50px);
}

.c0 > span {
  width: 1;
  font-size: 25px;
  display: inline-block;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c0 > span + span:before {
  padding: 0 8px;
  vertical-align: top;
  color: var(--text,#f00);
  content: "/";
}

.c0 > span {
  color: var(--text,#f00);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > span:hover {
  cursor: pointer;
  color: var(--blue,#f00);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > span:last-child:hover {
  color: var(--text,#f00);
  cursor: default;
}

<div
    className="sc-fzpans c0"
  >
    <span
      onClick={[Function]}
      test-tag="Home of mail@mailhost.dk"
      title="Home of mail@mailhost.dk"
    >
      Home of mail@mailhost.dk
    </span>
    <span
      title="folder1"
    >
      folder1
    </span>
  </div>,
]
`;

exports[`Breadcrumbs Build breadcrumbs, unembedded 1`] = `
Array [
  .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  vertical-align: middle;
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  font-size: 11px;
  margin-left: -15px;
}

<div
    className="c0"
  >
    <svg
      className="c1"
      cursor="pointer"
      fill="currentcolor"
      height="30px"
      onClick={[Function]}
      test-tag="to_home"
      viewBox="0 0 148.167 127.257"
      width="30px"
    >
      <path
        d="M0 63.5l10.583 10.583 63.5-52.916 63.5 52.916L148.167 63.5 74.083 0z"
      />
      <path
        d="M74.083 28.149l-50.27 41.618v57.49h34.316V92.312c0-4.162 2.06-11.64 15.954-11.628 13.894.012 15.958 7.406 15.958 11.71v34.863h34.313v-57.49zM124.354 38.92l-19.553-17.224V5.252l19.553.04z"
      />
    </svg>
    <div
      className="c2"
      cursor="pointer"
      fontSize="11px"
      onClick={[Function]}
    >
      Go to home
    </div>
  </div>,
  .c0 {
  cursor: inherit;
  font-size: 24px;
  margin-left: 6px;
  margin-right: 6px;
}

<div
    className="c0"
    cursor="inherit"
    fontSize="24px"
  >
    |
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - 180px);
}

.c0 > span {
  width: 1;
  font-size: 25px;
  display: inline-block;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c0 > span + span:before {
  padding: 0 8px;
  vertical-align: top;
  color: var(--text,#f00);
  content: "/";
}

.c0 > span {
  color: var(--text,#f00);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > span:hover {
  cursor: pointer;
  color: var(--blue,#f00);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > span:last-child:hover {
  color: var(--text,#f00);
  cursor: default;
}

<div
    className="sc-fzpans c0"
  >
    <span
      onClick={[Function]}
      test-tag="Home of mail@mailhost.dk"
      title="Home of mail@mailhost.dk"
    >
      Home of mail@mailhost.dk
    </span>
    <span
      title="folder1"
    >
      folder1
    </span>
  </div>,
]
`;
